--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ test:
   interruptible: true
   before_script:
     - apt-get update
-    - apt-get install -y python3-pip
+    - apt-get install -y build-essential libssl-dev python3-dev python3-pip
     - python --version
     - pip3 install -r requirements.txt
     - pip3 install -r requirements-dev.txt
